Bug 1216769 - change %ld to %lld to fix logging problems in trunk and B2G. r=jesup